5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1764_1580.log
== SUBMITION (2019-05-28 17:45:14) 
-- CODE:
from numpy import*

nota = array(
aluno = array(

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.166286
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 7
    aprovados = 0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:45:15) 
-- CODE:
from numpy import*

nota = array(
aluno = array(

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.220975
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 7
    aprovados = 0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:45:16) 
-- CODE:
from numpy import*

nota = array(
aluno = array(

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.151347
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 7
    aprovados = 0
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:46:01) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: "))
aluno = array(eval(input("ALUNO:"))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.217464
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 4
    aluno = array(eval(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:46:03) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: "))
aluno = array(eval(input("ALUNO:"))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.220151
-- ERROR:
  File "/home/codebench/codes/1764/1580/main.py", line 4
    aluno = array(eval(input())
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:46:06) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: "))
aluno = array(eval(input("ALUNO:"))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- ERROR:
File "XXXX", line 4
    aluno = array(eval(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 17:46:25) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:46:27) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.42998
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 17:46:29) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.470074
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:23:37) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:25:30) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:25:37) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
		
	
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
		
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
2.00087
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 23:36:50) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- EXECUTION TIME:
0.42685
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 23:37:30) 
-- CODE:
from numpy import*

nota = array(eval(input("NOTA: ")))
aluno = array(eval(input("ALUNO:")))

faltaram = 0
aprovados = 0
reprovados = 0
mp = 0 # media de presentes
i = 0

while(i < size(nota)):
	if ( nota[i] == -1):
		faltaram = faltaram + 1
	if( 6 <= nota[i] <= 10 ):
		aprovados = aprovados + 1
		mp = mp + nota[i]
	if (0 <= nota[i] < 6):
		reprovados = reprovados + 1
		mp = mp + nota[i]	
	if (nota[i] == max(nota)):
		maiornota = aluno[i]
	i = i + 1	
alunosp = aprovados + reprovados
media = mp/ alunosp

print(faltaram)
print(aprovados)
print(reprovados)
print(round(media,2))
print(maiornota)

		
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
